# learncpp-universal

./: CMakeLists.txt
00_07_HelloWorld/: 00_07_HelloWorld.cpp  00_07_HelloWorld.h  CMakeLists.txt
